RESOLVED FIXED198087
WHLSL: fix enum parsing
https://bugs.webkit.org/show_bug.cgi?id=198087
Summary WHLSL: fix enum parsing
Saam Barati
Reported 2019-05-21 15:06:14 PDT
...
Attachments
WIP (46.56 KB, patch)
2019-05-21 20:04 PDT, Saam Barati
no flags
patch (11.35 KB, patch)
2019-05-21 22:00 PDT, Saam Barati
mmaxfield: review+
patch for landing (11.36 KB, patch)
2019-05-22 16:43 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2019-05-21 19:38:58 PDT
Doing this next.
Saam Barati
Comment 2 2019-05-21 20:04:18 PDT
Created attachment 370375 [details] WIP contains all the dumper code. Will rebase once that lands.
Saam Barati
Comment 3 2019-05-21 22:00:15 PDT
Saam Barati
Comment 4 2019-05-21 22:00:56 PDT
Comment on attachment 370380 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=370380&action=review > LayoutTests/webgpu/whlsl-dont-crash-parsing-enum.html:1 > +<!DOCTYPE html> Will try to reduce this test case to just run the WHLSL parser. But I don't have a build yet to get against. Will fix for final patch.
Myles C. Maxfield
Comment 5 2019-05-22 09:57:05 PDT
Comment on attachment 370380 [details] patch Thanks for catching this! Is this the only place in the file where this bad pattern occurs?
Saam Barati
Comment 6 2019-05-22 13:58:10 PDT
(In reply to Myles C. Maxfield from comment #5) > Comment on attachment 370380 [details] > patch > > Thanks for catching this! Is this the only place in the file where this bad > pattern occurs? Which file are we talking about here? (Maybe we should make the name() method not return "String&").
Saam Barati
Comment 7 2019-05-22 16:25:09 PDT
Comment on attachment 370380 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=370380&action=review >> LayoutTests/webgpu/whlsl-dont-crash-parsing-enum.html:1 >> +<!DOCTYPE html> > > Will try to reduce this test case to just run the WHLSL parser. But I don't have a build yet to get against. Will fix for final patch. gonna just stick with this.
Saam Barati
Comment 8 2019-05-22 16:43:32 PDT
Created attachment 370466 [details] patch for landing
WebKit Commit Bot
Comment 9 2019-05-22 17:33:52 PDT
Comment on attachment 370466 [details] patch for landing Clearing flags on attachment: 370466 Committed r245662: <https://trac.webkit.org/changeset/245662>
WebKit Commit Bot
Comment 10 2019-05-22 17:33:53 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11 2019-05-22 17:35:28 PDT
Note You need to log in before you can comment on or make changes to this bug.