WHLSL: fix enum parsing https://bugs.webkit.org/show_bug.cgi?id=198087

Reviewed by Myles Maxfield.

Source/WebCore:

This fixes two bugs:

1. We were using a String by reference after moving the underlying owner of
the string. This would lead to the String becoming the empty value, and
crashing when used as a key in a hash map.
2. We were incorrectly producing a syntax error for enum declarations by
saying it's invalid if an enum value was added to a hash map for the first
time. This logic should be negated. We need to error when it's added for
the second time and onwards.

Test: webgpu/whlsl-dont-crash-parsing-enum.html

* Modules/webgpu/WHLSL/AST/WHLSLAST.h: Replaced.
* Modules/webgpu/WHLSL/AST/WHLSLEnumerationDefinition.h:
(WebCore::WHLSL::AST::EnumerationDefinition::add):
* Modules/webgpu/WHLSL/AST/WHLSLEnumerationMember.h:
(WebCore::WHLSL::AST::EnumerationMember::name):
* Modules/webgpu/WHLSL/WHLSLASTDumper.cpp: Replaced.
(WebCore::WHLSL::ASTDumper::visit):
* Modules/webgpu/WHLSL/WHLSLASTDumper.h: Replaced.

LayoutTests:

* webgpu/whlsl-dont-crash-parsing-enum-expected.html: Added.
* webgpu/whlsl-dont-crash-parsing-enum.html: Added.


Canonical link: https://commits.webkit.org/212219@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245662 268f45cc-cd09-0410-ab3c-d52691b4dbfc